Create global set of annotators referenced everywhere
The annotators are initialized in TalismaneSession. We no longer read
annotators from the models - instead it is the responsibility of the
person distributing the model to distribute the annotators which the model
depends on to function correctly. This vastly simplifies the management
of annotators, since before we could have the same (or different) annotators
in each model, and when analysing with four models it was necessary to
decide which model's annotators to use and how to handle model annotators
vs annotators supplied in the configuration.

Moreover, annotators are configured at top-level, and are then applied
as appropriate by the various modules, depending on the command (analyse,
train, evaluate, compare). Generally, we attempt to apply the annotators
as early as possible after the object to be annotated has been created,
e.g. a sentence, a token sequence.

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -25,7 +25,7 @@ talismane {
 		# - tokeniser
 		# - posTagger
 		# - parser
-		module = parser
+		# module = null
 		
 		# if inFile and inDir are not specified, Talismane will read from STDIN
 		# use inFile if a specific file is being read
@@ -76,30 +76,54 @@ talismane {
 		# A character (typically non-printing) which will mark a stop in the input stream and set-off analysis immediately. Must be a single character.
 		end-block-char-code = "\f"
 		
-		analysis {
-			# Annotators used to filter the raw text and transform it into text that needs to be processed
+		# The block size to use when applying filters - if a text filter regex goes beyond the blocksize, Talismane will fail.
+		# This is required because Talismane input is based on streaming, and in order to ensure filters are applied, we have to know when to stop reading and apply filters.
+		# A larger block size will avoid errors due to regex matches that are too large, but will mean longer waits before Talismane returns results when streaming.
+		block-size = 1000
+		
+		# How to handle the newline character, options are SPACE (will be replaced by a space) and SENTENCE_BREAK (will break sentences)
+		newline = SENTENCE_BREAK
+		
+		# The different types of annotators need to be applied in specific points of execution,
+		# depending on the command - they are applied at different stages depending on which modules
+		# are called and when.
+		# Specifically, when training, evaluating or simply analysing, they apply to different corpus-readers.
+		# All annotators are simply lists of file references - the files contain "descriptors" in a format
+		# specific to each annotator type.
+		# It is important when training a model to distribute the model with the same annotators are were
+		# applied to train it, as referenced by an appropriate configuration file.
+		annotators {
+			# Used to filter the raw text and transform it into text that can be processed
+			# Among other things, text filters:
+			# - tell us which sections to process and which sections to skip (e.g. when processing XML)
+			# - fix encoding/escaping (e.g. &quot; transformed into a quote)
+			# - impose sentence breaks (e.g. on double newlines, or on certain XML tags)
+			# - remove duplicate white space
 			text-filters = []
 			
-			# Annotators to be run before full analysis chain, but after raw text has been filtered
-			pre-annotators = []
+			# Used to prepare the text for sentence-detection and tokenisation, before sentence boundaries are known. In particular:
+			# - Mark deterministic token boundaries (e.g. around "aujourd'hui" in French)
+			# - Indicate the analysis text when different from raw text (e.g. replace the number 12 by "#NUMBER#")
+			# - Indicate that a sentence-boundary cannot occur within a certain word (e.g. Mr. Smith)
+			# - Add arbitrary tags to the text, which are inherited by the tokens and handled by downstream systems
+			text-annotators = []
 			
+			# Used to prepare text for analysis after sentence boundaries are known. In particular:
+			# - Lowercase a word at start-of-sentence if it is known in a wide-coverage lexicon
+			token-sequence-filters = []
+			
+			# Used to modify the pos-tag sequence generated. In particular:
+			# - If empty tokens were added and were assigned a NULL postag, will remove them again.
+			postag-sequence-filters = []
+		}
+		
+		analysis {
 			# at which stage should analysis start
-			start-module = sentence
+			start-module = sentenceDetector
 			
 			# at which stage should analysis end
 			end-module = parser
-			
-			# Annotators to be run after full analysis chain
-			post-annotators = []
-			
-			# The block size to use when applying filters - if a text filter regex goes beyond the blocksize, Talismane will fail.
-			# This is required because Talismane input is based on streaming, and in order to ensure filters are applied, we have to know when to stop reading and apply filters.
-			# A larger block size will avoid errors due to regex matches that are too large, but will mean longer waits before Talismane returns results when streaming.
-			block-size = 1000
-			
-			# How to handle the newline character, options are SPACE (will be replaced by a space) and SENTENCE_BREAK (will break sentences)
-			newline = SENTENCE_BREAK
-			
+						
 			# If true, the input file is processed from the very start (e.g. TXT files). If false, we wait until a text filter tells us to start processing (e.g. XML files).
 			process-by-default = true
 			
@@ -174,8 +198,6 @@ talismane {
 		}
 		
 		sentence-detector {
-			pre-annotators = []
-
 			# Path to the sentence detection model
 			#model = null
 			
@@ -203,9 +225,6 @@ talismane {
 		}
 		
 		tokeniser {
-			pre-annotators = []
-			token-sequence-filters = []
-			
 			### The tokeniser type:
 			# - simple: a deterministic tokeniser purely based on filters
 			# - pattern: a probabilistic tokeniser using supervised machine learning to take tokenisation decisions in areas where certain patterns are matched
@@ -228,10 +247,7 @@ talismane {
 
 				# the regex used to read tokens from the evaluation corpus
 				preannotated-pattern = ".+\t%TOKEN%"
-				
-				pre-annotators = ${talismane.core.tokeniser.pre-annotators}
-				token-sequence-filters = ${talismane.core.tokeniser.token-sequence-filters}
-				
+					
 				# if a sentence file is provided, the text of sentences represented by the tokenised input is provided by this file, one sentence per line.
 				# otherwise, their text for use in tokenisation features is automatically reconstructed from the manually tokenised input, and the spacing may be erroneous
 				#sentence-file = null
@@ -256,11 +272,7 @@ talismane {
 		pos-tagger {
 			# The pos-tag set used when no model has been provided
 			# pos-tag-set
-			
-			pre-annotators = []
-			token-sequence-filters = []
-			postag-sequence-filters = []
-			
+				
 			# A path to the pos-tagger model
 			#model = null
 			
@@ -291,10 +303,6 @@ talismane {
 				# A path to a file containing a regex describing how to read a lexical entry from each line in the corpus
 				# making it possible to maintain and/or transform morphosyntaxic attributes when processing a corpus
 				#corpus-lexical-entry-regex = null
-				
-				pre-annotators = ${talismane.core.pos-tagger.pre-annotators}
-				token-sequence-filters = ${talismane.core.pos-tagger.token-sequence-filters}
-				postag-sequence-filters = ${talismane.core.pos-tagger.postag-sequence-filters}
 			}
 			
 			train = ${talismane.core.pos-tagger.input} {
@@ -319,8 +327,9 @@ talismane {
 				# If we do generate the output guesses, how many guesses (from the beam) to include per analysis
 				output-guess-count = 1
 				
-				# Start-module: tokeniser or pos-tagger
-				start-module = ${talismane.core.module}
+				# Start-module: tokeniser or posTagger
+				# This allows us to evaluate a sequence of several modules in a row
+				start-module = posTagger
 			}
 		}
 		
@@ -330,10 +339,6 @@ talismane {
 			
 			# The list of possible dependency labels when no model has been provided
 			#dependency-labels = null
-			
-			pre-annotators = []
-			token-sequence-filters = []
-			postag-sequence-filters = []
 
 			# A path to the parser model
 			#model = null
@@ -400,10 +405,6 @@ talismane {
 				# A path to a file containing a regex describing how to read a lexical entry from each line in the corpus
 				# making it possible to maintain and/or transform morphosyntaxic attributes when processing a corpus
 				#corpus-lexical-entry-regex = null
-				
-				pre-annotators = ${talismane.core.parser.pre-annotators}
-				token-sequence-filters = ${talismane.core.parser.token-sequence-filters}
-				postag-sequence-filters = ${talismane.core.parser.postag-sequence-filters}
 			}
 			
 			train = ${talismane.core.parser.input} {
@@ -439,8 +440,9 @@ talismane {
 				# If we do generate the output guesses, how many guesses (from the beam) to include per analysis
 				output-guess-count = 1
 				
-				# Start-module: tokeniser, pos-tagger or parser
-				start-module = ${talismane.core.module}
+				# Start-module: tokeniser, posTagger or parser
+				# This allows us to evaluate a sequence of several modules in a row
+				start-module = parser
 			}
 		}
 		
