--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -225,6 +225,10 @@ talismane {
 		}
 		
 		tokeniser {
+			# A regex giving default separators for tokens.
+			# Note that Unicode character class will be applied
+			separators = "[\\s\\p{Punct}«»\\_‒–—―‛“”„‟′″‴‹›‘’‚\\*\ufeff]"
+			
 			### The tokeniser type:
 			# - simple: a deterministic tokeniser purely based on filters
 			# - pattern: a probabilistic tokeniser using supervised machine learning to take tokenisation decisions in areas where certain patterns are matched
