Fix bugs following parser train/evaluate/analyse/compare test
Allow sentenceCount and startSentence command-line options for all modules
Centralise reading of sentenceCount/startSentence and cross-validation
Change handling of predict-transitions configuration setting

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -141,15 +141,15 @@ talismane {
 			cross-validation {
 				# If greater than 0, the input file will be split into foldCount folds
 				# Typically, 10-fold validation is used, if cross-validation is desired
-				fold-count = 0
+				fold-count = -1
 				
 				# Used when evaluating in cross-validation
 				# If provided, only a single fold will be processed, numbered from 0 to foldCount -1
-				include-index = 0
+				include-index = -1
 				
 				# Used when training in cross-validation
 				# If provided, one of the folds will be excluded, numbered from 0 to foldCount - 1
-				exclude-index = 0
+				exclude-index = -1
 			}			
 		}
 			
@@ -403,8 +403,7 @@ talismane {
 				# or should dependencies simply be added with null transitions. Outside of training, it is only
 				# useful to predict transitions if we need the transition sequence, e.g. to check that the
 				# given dependency tree is reachable via the selected transition system.
-				# Choices are: yes, no and depends, where depends means yes for training and no otherwise.
-				predict-transitions = depends
+				predict-transitions = false
 				
 				# A path to a file containing a regex describing how to read a lexical entry from each line in the corpus
 				# making it possible to maintain and/or transform morphosyntaxic attributes when processing a corpus
@@ -414,6 +413,8 @@ talismane {
 			train = ${talismane.core.parser.input} {
 				# A path to a file containing parser feature descriptors
 				#features = null
+				
+				predict-transitions = true
 				
 				machine-learning = ${talismane.machine-learning}
 			}
