Create clear distinction between text and sentence annotators
The sentence detector now clearly uses RawTextMarkers to find no sentence
break areas, including a new test to prove it.

Added an API example to illustrate full current usage of annotators.

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -98,15 +98,16 @@ talismane {
 			# - tell us which sections to process and which sections to skip (e.g. when processing XML)
 			# - fix encoding/escaping (e.g. &quot; transformed into a quote)
 			# - impose sentence breaks (e.g. on double newlines, or on certain XML tags)
+			# - indicate that a sentence-boundary cannot occur within a certain word (e.g. Mr. Smith)
 			# - remove duplicate white space
-			text-filters = []
+			text-annotators = []
 			
-			# Used to prepare the text for sentence-detection and tokenisation, before sentence boundaries are known. In particular:
+			# Used to prepare a sentence for tokenisation and pos-tagging. In particular:
 			# - Mark deterministic token boundaries (e.g. around "aujourd'hui" in French)
 			# - Indicate the analysis text when different from raw text (e.g. replace the number 12 by "#NUMBER#")
-			# - Indicate that a sentence-boundary cannot occur within a certain word (e.g. Mr. Smith)
+			# - Impose pos-tags on a particular word
 			# - Add arbitrary tags to the text, which are inherited by the tokens and handled by downstream systems
-			text-annotators = []
+			sentence-annotators = []
 			
 			# Used to prepare text for analysis after sentence boundaries are known. In particular:
 			# - Lowercase a word at start-of-sentence if it is known in a wide-coverage lexicon
