--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -27,17 +27,8 @@ talismane {
 		# - parser
 		# module = null
 		
-		# if inFile and inDir are not specified, Talismane will read from STDIN
-		# use inFile if a specific file is being read
-		#in-file = null
-		# use inDir if a full directory needs to be processed
-		#in-dir = null
-		
-		# if out-file and out-dir are not specified, Talismane will write to STDOUT
-		# use out-file to write all output to a single file
-		#out-file = null
-		# use out-dir to write output to a directory - in combination with in-dir, will write one file out per file read in
-		#out-dir = null
+		# gives the base name for output files, if not overridden in code
+		base-name = "talismane"
 		
 		# If provided, will add this suffix to all output files (both in analysis and evaluation). Useful when comparing configurations.
 		suffix = ""
@@ -122,6 +113,10 @@ talismane {
 			
 			# Should analysis stop if an analysis error occurs, or should it simply skip the sentence and continue
 			stop-on-error = true
+			
+			# If false, will only take into account the output for the end module
+			# If true, will take into account output for all modules
+			output-intermediate-modules = false
 		}
 		
 		input {
@@ -154,13 +149,6 @@ talismane {
 			# A string to insert between sections marked for output (e.g. XML tags to be kept in the analysed output).
 			# The String NEWLINE is interpreted as "\n". Otherwise, used literally.
 			output-divider = ""
-			
-			# processing options:
-			# - output: Simply output what you read, usually changing the format
-			# - loadParsingConstraints: Load the parsing constraints from a training corpus.
-			# - posTagFeatureTester: Test pos-tag features on a subset of words in the training set.
-			# - parseFeatureTester: Test parse features on the training set.
-			option = output
 			
 			# if set to true, the total time of talismane execution will be written to a separate file
 			log-execution-time = false
@@ -212,8 +200,6 @@ talismane {
 			}
 			
 			evaluate = ${talismane.core.sentence-detector.input} {
-				# The file to evaluate against the in-file
-				#eval-file = null
 			}
 		}
 		
@@ -261,8 +247,6 @@ talismane {
 			}
 			
 			evaluate = ${talismane.core.tokeniser.input} {
-				# The file to evaluate against the in-file
-				#eval-file = null
 			}
 		}
 		
@@ -283,6 +267,11 @@ talismane {
 			propagate-tokeniser-beam = false
 			
 			output = ${talismane.core.output} {
+				# a list of processors to apply
+				# - output: Simply output what you read, usually changing the format
+				# - posTagFeatureTester: Test pos-tag features on a subset of words in the training set.
+				processors = [ output ]
+			
 				# if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
 				#template = null
 				
@@ -310,9 +299,6 @@ talismane {
 			}
 			
 			evaluate = ${talismane.core.pos-tagger.input} {
-				# The file to evaluate against the in-file
-				#eval-file = null
-				
 				# if true, will add files ending with "_unknown.csv" and "_known.csv" splitting pos-tagging f-scores into known and unknown words
 				include-unknown-word-results = false
 				
@@ -373,12 +359,14 @@ talismane {
 			early-stop = false
 			
 			output = ${talismane.core.output} {
+				# a list of processors to apply
+				# - output: Simply output what you read, usually changing the format
+				# - parseFeatureTester: Test parse features on the training set.
+				# - transitionLog: writes the list of transitions that were actually applied, one at a time.
+				processors = [output]
+				
 				# if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
 				#template = null
-				
-				### Output the transitions applied
-				# If true, writes the list of transitions that were actually applied, one at a time.
-				include-transition-log = false
 			}
 			
 			# If true, feature descriptors will be converted into a single dynamically generated class
@@ -413,9 +401,6 @@ talismane {
 			}
 			
 			evaluate = ${talismane.core.parser.input} {
-				# The file to evaluate against the in-file
-				#eval-file = null
-				
 				# If true, takes both governor and dependency label into account when determining errors. If false, only the governor is taken into account.
 				labeled-evaluation = true
 				
@@ -428,6 +413,9 @@ talismane {
 				
 				# Label to be skipped when calculating distance f-scores - for arbitrary distance attachments in the case of punctuation
 				#skip-label = null
+				
+				# Whether or not to include a limited log of full transitions in the evaluation output
+				include-transition-log = false
 				
 				# If included, will output in the transition log, at the end of each parse, the correct sentence and erroneous sentence
 				# if the error concerned any one of these comma-separated dependency labels
