Fix projecify and toStandoff extensions
When projectifying, select strategy from config file.
Allow user to add a projectified label suffix, for pseudo-projective training.
Fix statistics to use non-projective relations, and correct calculations.
Write standoff annotations and sentences in a single "toStandoff" command.
Read which dependency label represents punctuation directly from the
dependency label file.

--- a/talismane_extensions/src/main/resources/reference.conf
+++ b/talismane_extensions/src/main/resources/reference.conf
@@ -1,8 +1,11 @@
 talismane {
-	extensions {
-		parser {
-			# The generic dependency label (if any) joining punctuation to its head.
-			# punctuation-dep-label = "ponct"
-		}
-	}
+  extensions {
+    projectifier {
+      # A suffix to add to any projectivised arcs
+      non-projective-arc-suffix = ""
+      
+      # Strategy for selecting among two potential projective heads: LeastLinearDistance|LeastDepthDifference|GreatestDepth
+      strategy = "GreatestDepth"
+    }
+  }
 }
