Add tests for lexical attribute features

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -45,6 +45,8 @@ talismane {
     
     ### The list of lexicons to use
     # The lexicons are used to find lemmas and morphosyntaxic attributes for known words, and to feed various analysis features
+    # The list can either be zip files with the ".zip" extension (assumed to be lexicons pre-serialized with the serializeLexicon command)
+    # or text files (assumed to be on the local file system, and to represent lexicon properties files).
     lexicons = []
     
     # The paths to various external word lists (can be either folders or files)
@@ -289,6 +291,10 @@ talismane {
         # A path to a file containing a regex describing how to read a lexical entry from each line in the corpus
         # making it possible to maintain and/or transform morphosyntaxic attributes when processing a corpus
         #corpus-lexical-entry-regex = null
+        
+        # if a sentence file is provided, the text of sentences represented by the tokenised input is provided by this file, one sentence per line.
+        # allows Talismane to know the correct original spacing.
+        #sentence-file = null
       }
       
       train = ${talismane.core.pos-tagger.input} {
@@ -389,6 +395,10 @@ talismane {
         # A path to a file containing a regex describing how to read a lexical entry from each line in the corpus
         # making it possible to maintain and/or transform morphosyntaxic attributes when processing a corpus
         #corpus-lexical-entry-regex = null
+ 
+        # if a sentence file is provided, the text of sentences represented by the tokenised input is provided by this file, one sentence per line.
+        # allows Talismane to know the correct original spacing.
+        #sentence-file = null
       }
       
       train = ${talismane.core.parser.input} {
