--- a/talismane_core/src/test/resources/testWithLex.conf
+++ b/talismane_core/src/test/resources/testWithLex.conf
@@ -1,7 +1,11 @@
 talismane {
   core {
     locale = fr
-		
+	
+	lexicons = [
+		"src/test/resources/lexicons/lexicons_fr.txt"
+	]
+	
     pos-tagger {
       # The pos-tag set used when no model has been provided
       pos-tag-set = "src/test/resources/talismaneTagset_fr.txt"
