Allow parser event stream to skip impossible sentences rather than crashing
So that training can continue on all other sentences

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -401,6 +401,9 @@ talismane {
         # A path to a file containing parser feature descriptors
         #features = null
         
+        # When training, skip any sentences which cannot be parsed (rather than raising an exception)
+        skip-impossible-sentences = true
+        
         predict-transitions = true
         
         machine-learning = ${talismane.machine-learning}
