Add corpus rules to reference.conf

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -236,6 +236,9 @@ talismane {
         # if a sentence file is provided, the text of sentences represented by the tokenised input is provided by this file, one sentence per line.
         # otherwise, their text for use in tokenisation features is automatically reconstructed from the manually tokenised input, and the spacing may be erroneous
         #sentence-file = null
+        
+        # See core.talismane.parser.input.corpus-rules
+        corpus-rules = []
       }
       
       train = ${talismane.core.tokeniser.input} {        
@@ -295,6 +298,9 @@ talismane {
         # if a sentence file is provided, the text of sentences represented by the tokenised input is provided by this file, one sentence per line.
         # allows Talismane to know the correct original spacing.
         #sentence-file = null
+        
+        # See core.talismane.parser.input.corpus-rules
+        corpus-rules = []
       }
       
       train = ${talismane.core.pos-tagger.input} {
@@ -395,6 +401,29 @@ talismane {
         # if a sentence file is provided, the text of sentences represented by the tokenised input is provided by this file, one sentence per line.
         # allows Talismane to know the correct original spacing.
         #sentence-file = null
+
+        # A list of corpus transformation rules, which can change the value any element read from a pre-annotated input corpus
+        # based an a conjunction of regexes matching any set of elements on the same line.
+        # All rules will be matched prior to applying changes, and the first matching rule to change a particular element wins.
+        # The set of possible elements are the same as those found in the preannotated-pattern.
+        corpus-rules = [
+        ## for example, this rule states that any row where the POSTAG is two single quotes will be transformed into a double-quote, and assigned the POSTAG "P"
+        #  {
+        #    criteria = { POSTAG = "(``|'')" }
+        #    actions = {
+        #      POSTAG = "P"
+        #      TOKEN = "\""
+        #    }
+        #  },
+        ## This rule states taht any row where the POSTAG and TOKEN both match one of a set of values will have the POSTAG set to P
+        #  {
+        #    criteria = {
+        #      POSTAG = "[,:.()]"
+        #      TOKEN = "[,:.()]"
+        #    }
+        #    actions = { POSTAG = "P" }
+        #  }
+        ]
       }
       
       train = ${talismane.core.parser.input} {
