Concentrate training resources in the languagePacks directory
Provide full material for English training (except for the PennDep corpus
itself, thereby removing the talismane_en project completely.

Correct bug that slipped into the pos-tagger training (duplicate
WordFormFeature and TokenIndexFeature classes imported by mistake).

Changed "preannotated-regex" to "input-regex" throughout (more readable).

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -231,7 +231,7 @@ talismane {
         corpus-reader = com.joliciel.talismane.tokeniser.TokenRegexBasedCorpusReader
 
         # the regex used to read tokens from the evaluation corpus
-        preannotated-pattern = ".+\t%TOKEN%"
+        input-pattern = ".+\t%TOKEN%"
           
         # if a sentence file is provided, the text of sentences represented by the tokenised input is provided by this file, one sentence per line.
         # otherwise, their text for use in tokenisation features is automatically reconstructed from the manually tokenised input, and the spacing may be erroneous
@@ -289,7 +289,7 @@ talismane {
         corpus-reader = com.joliciel.talismane.posTagger.PosTagRegexBasedCorpusReader
 
         # the regex used to read tokens from the evaluation corpus
-        preannotated-pattern = ".*\t%TOKEN%\t.*\t%POSTAG%\t.*\t.*\t"
+        input-pattern = ".*\t%TOKEN%\t.*\t%POSTAG%\t.*\t.*\t"
         
         # A path to a file containing a regex describing how to read a lexical entry from each line in the corpus
         # making it possible to maintain and/or transform morphosyntaxic attributes when processing a corpus
@@ -386,7 +386,7 @@ talismane {
         corpus-reader = com.joliciel.talismane.parser.ParserRegexBasedCorpusReader
 
         # the regex used to read tokens from the evaluation corpus
-        preannotated-pattern = "%INDEX%\t%TOKEN%\t.*\t%POSTAG%\t.*\t.*\t%NON_PROJ_GOVERNOR%\t%NON_PROJ_LABEL%\t%GOVERNOR%\t%LABEL%"
+        input-pattern = "%INDEX%\t%TOKEN%\t.*\t%POSTAG%\t.*\t.*\t%NON_PROJ_GOVERNOR%\t%NON_PROJ_LABEL%\t%GOVERNOR%\t%LABEL%"
         
         # Should an attempt be made to the predict the transitions that led to this configuration,
         # or should dependencies simply be added with null transitions. Outside of training, it is only
@@ -405,7 +405,7 @@ talismane {
         # A list of corpus transformation rules, which can change the value any element read from a pre-annotated input corpus
         # based an a conjunction of regexes matching any set of elements on the same line.
         # All rules will be matched prior to applying changes, and the first matching rule to change a particular element wins.
-        # The set of possible elements are the same as those found in the preannotated-pattern.
+        # The set of possible elements are the same as those found in the input-pattern.
         corpus-rules = [
         ## for example, this rule states that any row where the POSTAG is two single quotes will be transformed into a double-quote, and assigned the POSTAG "P"
         #  {
