Fix minor bugs for Penn Treebank training

--- a/talismane_core/languagePacks/english/config/penn-dep-train-4.0.0.conf
+++ b/talismane_core/languagePacks/english/config/penn-dep-train-4.0.0.conf
@@ -12,6 +12,12 @@ input-pattern="%INDEX%\t%TOKEN%\t.*?\t%POSTAG%\t.*?\t.*?\t%GOVERNOR%\t%LABEL%\t.
 
 corpus-rules = [
   {
+    criteria = { TOKEN = "(``|'')" }
+    actions = {
+      TOKEN = "\""
+    }
+  },
+  {
     criteria = { POSTAG = "(``|'')" }
     actions = {
       POSTAG = "P"
