--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -208,7 +208,7 @@ talismane {
     tokeniser {
       # A regex giving default separators for tokens.
       # Note that Unicode character class will be applied
-      separators = "[\\s\\p{Punct}«»\\_‒–—―‛“”„‟′″‴‹›‘’‚\\*\ufeff]"
+      separators = "[\\s\\p{Punct}«»\\_‒–—―`‛“”„‟′″‴‹›‘’‚\\*\ufeff]"
       
       ### The tokeniser type:
       # - simple: a deterministic tokeniser purely based on filters
