Allow configuration to avoid text block size check
When not streaming, e.g. analysing one document at a time using the API.

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -72,6 +72,8 @@ talismane {
     # The block size to use when applying filters - if a text filter regex goes beyond the blocksize, Talismane will fail.
     # This is required because Talismane input is based on streaming, and in order to ensure filters are applied, we have to know when to stop reading and apply filters.
     # A larger block size will avoid errors due to regex matches that are too large, but will mean longer waits before Talismane returns results when streaming.
+    # Set the block size = 0 if analysing individual files via the API, rather than streams via the command-line or API.
+    # A block-size of 0 means no errors will get generated.
     block-size = 1000
     
     # How to handle the newline character, options are SPACE (will be replaced by a space) and SENTENCE_BREAK (will break sentences)
