--- a/talismane_extensions/pom.xml
+++ b/talismane_extensions/pom.xml
@@ -73,7 +73,7 @@
   <parent>
     <groupId>com.joliciel.talismane</groupId>
     <artifactId>talismane-parent</artifactId>
-    <version>4.0.2</version>
+    <version>4.0.3-SNAPSHOT</version>
     <relativePath>../talismane_parent</relativePath>
   </parent>
   <dependencies>
