Make output processors configurable for all modules
Previously, configuration only allowed us to use pre-defined output
processors. We now allow any output processor, as long as it implements
the interface required by the module (e.g. ParseConfigurationProcessor for
the parser), and provides one of three constructors. This makes it much
simpler to extend Talimsne's processing capabilities, simply by adding
a class to the classpath which meets these constraints, and changing the
configuration file to point to this class.

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -187,6 +187,18 @@ talismane {
       #model = null
       
       output = ${talismane.core.output} {
+        # a list of processors to apply
+        # - FreemarkerSentenceWriter:  Output using a freemarker template.
+        # Others may be defined, as long as:
+        # - they're on the classpath,
+        # - they implement com.joliciel.talismane.sentenceDetector.SentenceProcessor,
+        # - they implement a constructor with the signatures (Writer, TalismaneSession) for the main output,
+        #    (File outDir, TalismaneSession) for additional output, or (TalismaneSession) for no output.
+        # The first processor implementing (Writer, TalismaneSession) will write to the main output file.
+        processors = [
+          "com.joliciel.talismane.sentenceDetector.FreemarkerSentenceWriter"
+        ]
+        
         # if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
         #template = null
       }
@@ -224,6 +236,18 @@ talismane {
       beam-width = 1
             
       output = ${talismane.core.output} {
+        # a list of processors to apply
+        # - FreemarkerTokenWriter:  Output using a freemarker template.
+        # Others may be defined, as long as:
+        # - they're on the classpath,
+        # - they implement com.joliciel.talismane.tokeniser.TokenSequenceProcessor,
+        # - they implement a constructor with the signatures (Writer, TalismaneSession) for the main output,
+        #    (File outDir, TalismaneSession) for additional output, or (TalismaneSession) for no output.
+        # The first processor implementing (Writer, TalismaneSession) will write to the main output file.
+        processors = [
+          "com.joliciel.talismane.tokeniser.FreemarkerTokenWriter"
+        ]
+        
         # if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
         #template = null
       }
@@ -275,9 +299,18 @@ talismane {
       
       output = ${talismane.core.output} {
         # a list of processors to apply
-        # - output: Simply output what you read, usually changing the format
-        # - posTagFeatureTester: Test pos-tag features on a subset of words in the training set.
-        processors = [ output ]
+        # - FreemarkerPosTagWriter:  Output using a freemarker template.
+        # - PosTagFeatureTester: Test pos-tag features on a subset of words in the training set.
+        # Others may be defined, as long as:
+        # - they're on the classpath,
+        # - they implement com.joliciel.talismane.posTagger.PosTagSequenceProcessor,
+        # - they implement a constructor with the signatures (Writer, TalismaneSession) for the main output,
+        #    (File outDir, TalismaneSession) for additional output, or (TalismaneSession) for no output.
+        # The first processor implementing (Writer, TalismaneSession) will write to the main output file.
+        processors = [
+          com.joliciel.talismane.posTagger.FreemarkerPosTagWriter
+          # com.joliciel.talismane.posTagger.PosTagFeatureTester
+        ]
       
         # if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
         #template = null
@@ -374,10 +407,20 @@ talismane {
       
       output = ${talismane.core.output} {
         # a list of processors to apply
-        # - output: Simply output what you read, usually changing the format
-        # - parseFeatureTester: Test parse features on the training set.
-        # - transitionLog: writes the list of transitions that were actually applied, one at a time.
-        processors = [output]
+        # - FreemarkerParseWriter: Output using a freemarker template.
+        # - ParseFeatureTester: Test parse features on the training set.
+        # - TransitionLogWriter: writes the list of transitions that were actually applied, one at a time.
+        # Others may be defined, as long as:
+        # - they're on the classpath,
+        # - they implement com.joliciel.talismane.parser.ParseConfigurationProcessor,
+        # - they implement a constructor with the signatures (Writer, TalismaneSession) for the main output,
+        #    (File outDir, TalismaneSession) for additional output, or (TalismaneSession) for no output.
+        # The first processor implementing (Writer, TalismaneSession) will write to the main output file.
+        processors = [
+          com.joliciel.talismane.parser.FreemarkerParseWriter
+          # com.joliciel.talismane.parser.ParseFeatureTester
+          # com.joliciel.talismane.parser.TransitionLogWriter
+        ]
         
         # if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
         #template = null
