Add possibility to keep original lemma and morphology in output
Also, take pos-tag mappers out of lexicons and into config file, to allow
the same lexicon to be used for multiple tagsets.

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -284,6 +284,11 @@ talismane {
     pos-tagger {
       # The pos-tag set used when no model has been provided
       # pos-tag-set
+      
+      pos-tag-map {
+        # for each lexicon name in the lexicon list, optionally list a pos-tag mapper path mapping the lexicon entries to pos-tags
+        # if no entry is found, will use the default pos-tag mapper which maps Categories directly to pos-tags
+      }
         
       # A path to the pos-tagger model
       #model = null
