--- a/talismane_core/src/test/resources/testWithLex.conf
+++ b/talismane_core/src/test/resources/testWithLex.conf
@@ -7,8 +7,12 @@ talismane {
 	]
 	
     pos-tagger {
-      # The pos-tag set used when no model has been provided
       pos-tag-set = "src/test/resources/talismaneTagset_fr.txt"
+      
+      pos-tag-map {
+      	GlaffD = "src/test/resources/lexicons/glaff-1.2.1_posTagMap.txt"
+      	LefffD = "src/test/resources/lexicons/lefff-ext-3.2_posTagMap.txt"
+      }
     }
   }
 }
