Move pos-tag-maps out of French and English lexicons and into language packs

--- a/talismane_core/languagePacks/english/config/penn-dep-train.conf
+++ b/talismane_core/languagePacks/english/config/penn-dep-train.conf
@@ -88,6 +88,10 @@ talismane {
     pos-tagger {
       pos-tag-set = ${languagePack}"pennTagset.txt"
       
+      pos-tag-map = {
+        Dela = ${languagePack}"dela-en_posTagMap.txt"
+      }
+      
       rules = [
         ${languagePack}"posTaggerConstraints_en.txt"
       ]
