--- a/talismane_core/languagePacks/french/config/spmrl-fr-train.conf
+++ b/talismane_core/languagePacks/french/config/spmrl-fr-train.conf
@@ -44,7 +44,10 @@ talismane {
     
     pos-tagger {
       pos-tag-set = ${languagePack}"talismaneTagset_fr.txt"
-            
+      
+      pos-tag-map = {
+        Lefff = ${languagePack}"lefff-ext-3.2_posTagMap.txt"
+      }
       rules = [
         ${languagePack}"posTaggerConstraints_fr.txt"
       ]
