--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -196,7 +196,7 @@ talismane {
         #    (File outDir, TalismaneSession) for additional output, or (TalismaneSession) for no output.
         # The first processor implementing (Writer, TalismaneSession) will write to the main output file.
         processors = [
-          "com.joliciel.talismane.sentenceDetector.FreemarkerSentenceWriter"
+          com.joliciel.talismane.sentenceDetector.FreemarkerSentenceWriter
         ]
         
         # if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
@@ -224,10 +224,12 @@ talismane {
       # Note that Unicode character class will be applied
       separators = "[\\s\\p{Punct}«»\\_‒–—―`‛“”„‟′″‴‹›‘’‚\\*\ufeff]"
       
-      ### The tokeniser type:
-      # - simple: a deterministic tokeniser purely based on filters
-      # - pattern: a probabilistic tokeniser using supervised machine learning to take tokenisation decisions in areas where certain patterns are matched
-      type = "simple"
+      ### The tokeniser itself. Must extend com.joliciel.talismane.Tokeniser and have a constructor taking a TalismaneSession.
+      # - com.joliciel.talismane.tokeniser.SimpleTokeniser:
+      #      a deterministic tokeniser purely based on filters
+      # - com.joliciel.talismane.tokeniser.patterns.PatternTokeniser:
+      #      a probabilistic tokeniser using supervised machine learning to take tokenisation decisions in areas where certain patterns are matched
+      tokeniser = com.joliciel.talismane.tokeniser.SimpleTokeniser
       
       # If using a pattern tokeniser, the path to the tokeniser model
       #model = null
@@ -245,7 +247,7 @@ talismane {
         #    (File outDir, TalismaneSession) for additional output, or (TalismaneSession) for no output.
         # The first processor implementing (Writer, TalismaneSession) will write to the main output file.
         processors = [
-          "com.joliciel.talismane.tokeniser.FreemarkerTokenWriter"
+          com.joliciel.talismane.tokeniser.FreemarkerTokenWriter
         ]
         
         # if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
@@ -257,7 +259,7 @@ talismane {
         corpus-reader = com.joliciel.talismane.tokeniser.TokenRegexBasedCorpusReader
 
         # the regex used to read tokens from the evaluation corpus
-        input-pattern = ".+\t%TOKEN%"
+        input-pattern = "%INDEX%\t%TOKEN%"
           
         # if a sentence file is provided, the text of sentences represented by the tokenised input is provided by this file, one sentence per line.
         # otherwise, their text for use in tokenisation features is automatically reconstructed from the manually tokenised input, and the spacing may be erroneous
@@ -278,10 +280,26 @@ talismane {
       }
       
       evaluate = ${talismane.core.tokeniser.input} {
+        # A list of observers to apply when evaluating.
+        # Others may be defined, as long as:
+        # - they're on the classpath,
+        # - they implement com.joliciel.talismane.tokeniser.evaluate.TokenEvaluationObserver,
+        # - they implement a constructor with the signatures (File outDir, TalismaneSession) for output,
+        #   or (TalismaneSession) for no output.
+        observers = [
+          # to write f-scores of the various patterns
+          com.joliciel.talismane.tokeniser.evaluate.TokenFScoreCalculator
+          
+          # writes out the corpus with errors highlighted
+          # com.joliciel.talismane.tokeniser.evaluate.TokenEvaluationCorpusWriter
+        ]
       }
     }
     
     pos-tagger {
+      # The pos-tagger itself. Must extend com.joliciel.talismane.posTagger.PosTagger and have a constructor taking a TalismaneSession
+      pos-tagger = com.joliciel.talismane.posTagger.ForwardStatisticalPosTagger
+      
       # The pos-tag set used when no model has been provided
       # pos-tag-set
       
@@ -308,13 +326,13 @@ talismane {
         # - PosTagFeatureTester: Test pos-tag features on a subset of words in the training set.
         # Others may be defined, as long as:
         # - they're on the classpath,
-        # - they implement com.joliciel.talismane.posTagger.PosTagSequenceProcessor,
+        # - they implement com.joliciel.talismane.posTagger.output.PosTagSequenceProcessor,
         # - they implement a constructor with the signatures (Writer, TalismaneSession) for the main output,
         #    (File outDir, TalismaneSession) for additional output, or (TalismaneSession) for no output.
         # The first processor implementing (Writer, TalismaneSession) will write to the main output file.
         processors = [
-          com.joliciel.talismane.posTagger.FreemarkerPosTagWriter
-          # com.joliciel.talismane.posTagger.PosTagFeatureTester
+          com.joliciel.talismane.posTagger.output.FreemarkerPosTagWriter
+          # com.joliciel.talismane.posTagger.output.PosTagFeatureTester
         ]
       
         # if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
@@ -329,7 +347,7 @@ talismane {
         corpus-reader = com.joliciel.talismane.posTagger.PosTagRegexBasedCorpusReader
 
         # the regex used to read tokens from the evaluation corpus
-        input-pattern = ".*\t%TOKEN%\t.*\t%POSTAG%\t.*\t.*\t"
+        input-pattern = "%INDEX%\t%TOKEN%\t%LEMMA%\t%POSTAG%\t%CATEGORY%\t%MORPHOLOGY%"
         
         # A path to a file containing a regex describing how to read a lexical entry from each line in the corpus
         # making it possible to maintain and/or transform morphosyntaxic attributes when processing a corpus
@@ -354,21 +372,37 @@ talismane {
         # if true, will add files ending with "_unknown.csv" and "_known.csv" splitting pos-tagging f-scores into known and unknown words
         include-unknown-word-results = false
         
-        # if true, will add a file ending with ".lexiconCoverage.csv" giving lexicon word coverage
-        include-lexicon-coverage = false
-        
-        # Whether or not a separate file should be generated including the guessed output in a fairly compact format
-        output-guesses = false
         # If we do generate the output guesses, how many guesses (from the beam) to include per analysis
         output-guess-count = 1
         
         # Start-module: tokeniser or posTagger
         # This allows us to evaluate a sequence of several modules in a row
         start-module = posTagger
+        
+        # A list of observers to apply when evaluating.
+        # Others may be defined, as long as:
+        # - they're on the classpath,
+        # - they implement com.joliciel.talismane.posTagger.evaluate.PosTagEvaluationObserver,
+        # - they implement a constructor with the signatures (File outDir, TalismaneSession) for output,
+        #   or (TalismaneSession) for no output.
+        observers = [
+          # to write f-scores of the various dependency labels
+          # respects include-unknown-word-results
+          com.joliciel.talismane.posTagger.evaluate.PosTagFScoreCalculator
+          
+          # Generate the guessed output in a fairly compact format - respects the output-guess-count
+          # com.joliciel.talismane.posTagger.evaluate.PosTagEvaluationSentenceWriter
+          
+          # add a file ending with ".lexiconCoverage.csv" giving lexicon word coverage
+          # com.joliciel.talismane.posTagger.evaluate.PosTagLexicalCoverageTester
+        ]
       }
     }
     
     parser {
+      # The parser itself. Must extend com.joliciel.talismane.parser.Parser and have a constructor taking a TalismaneSession
+      parser = com.joliciel.talismane.parser.TransitionBasedParser
+      
       # The transition system used when no model has been provided: ArcEager or ShiftReduce
       transition-system = "ArcEager"
       
@@ -417,14 +451,14 @@ talismane {
         # - TransitionLogWriter: writes the list of transitions that were actually applied, one at a time.
         # Others may be defined, as long as:
         # - they're on the classpath,
-        # - they implement com.joliciel.talismane.parser.ParseConfigurationProcessor,
+        # - they implement com.joliciel.talismane.parser.output.ParseConfigurationProcessor,
         # - they implement a constructor with the signatures (Writer, TalismaneSession) for the main output,
         #    (File outDir, TalismaneSession) for additional output, or (TalismaneSession) for no output.
         # The first processor implementing (Writer, TalismaneSession) will write to the main output file.
         processors = [
-          com.joliciel.talismane.parser.FreemarkerParseWriter
-          # com.joliciel.talismane.parser.ParseFeatureTester
-          # com.joliciel.talismane.parser.TransitionLogWriter
+          com.joliciel.talismane.parser.output.FreemarkerParseWriter
+          # com.joliciel.talismane.parser.output.ParseFeatureTester
+          # com.joliciel.talismane.parser.output.TransitionLogWriter
         ]
         
         # if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
@@ -436,7 +470,7 @@ talismane {
         corpus-reader = com.joliciel.talismane.parser.ParserRegexBasedCorpusReader
 
         # the regex used to read tokens from the evaluation corpus
-        input-pattern = "%INDEX%\t%TOKEN%\t.*\t%POSTAG%\t.*\t.*\t%NON_PROJ_GOVERNOR%\t%NON_PROJ_LABEL%\t%GOVERNOR%\t%LABEL%"
+        input-pattern = "%INDEX%\t%TOKEN%\t%LEMMA%\t%POSTAG%\t%CATEGORY%\t%MORPHOLOGY%\t%NON_PROJ_GOVERNOR%\t%NON_PROJ_LABEL%\t%GOVERNOR%\t%LABEL%"
         
         # Should an attempt be made to the predict the transitions that led to this configuration,
         # or should dependencies simply be added with null transitions. Outside of training, it is only
@@ -492,31 +526,46 @@ talismane {
         # If true, takes both governor and dependency label into account when determining errors. If false, only the governor is taken into account.
         labeled-evaluation = true
         
-        # if true, will output a file giving average time for sentences of different lengths, making it possible to see if analysis is performing in linear time
-        include-time-per-token = false
-        
-        ### Distance f-score output
-        # If true, calculates and writes the f-score for each separate governor to dependent distance during a parse evaluation
-        include-distance-fscores = false
+        # If true, evaluate the projective labels/governors. If false, evaluate the non-projective labels/governors.
+        projective = true
         
         # Label to be skipped when calculating distance f-scores - for arbitrary distance attachments in the case of punctuation
         #skip-label = null
         
-        # Whether or not to include a limited log of full transitions in the evaluation output
-        include-transition-log = false
-        
         # If included, will output in the transition log, at the end of each parse, the correct sentence and erroneous sentence
         # if the error concerned any one of these comma-separated dependency labels
         error-labels = []
-        
-        # Whether or not a separate file should be generated including the guessed output in a fairly compact format
-        output-guesses = false
+
         # If we do generate the output guesses, how many guesses (from the beam) to include per analysis
         output-guess-count = 1
         
         # Start-module: tokeniser, posTagger or parser
         # This allows us to evaluate a sequence of several modules in a row
         start-module = parser
+        
+        # A list of observers to apply when evaluating.
+        # Others may be defined, as long as:
+        # - they're on the classpath,
+        # - they implement com.joliciel.talismane.parser.evaluate.ParseEvaluationObserver,
+        # - they implement a constructor with the signatures (File outDir, TalismaneSession) for output,
+        #   or (TalismaneSession) for no output.
+        observers = [
+          # to write f-scores of the various dependency labels
+          com.joliciel.talismane.parser.evaluate.ParserFScoreCalculator
+          
+          # Generate the guessed output in a fairly compact format - respects the output-guess-count
+          # com.joliciel.talismane.parser.evaluate.ParseEvaluationSentenceWriter
+          
+          # Calculates and writes the f-score for each separate governor to dependent distance during a parse evaluation
+          # com.joliciel.talismane.parser.evaluate.ParserFScoreCalculatorByDistance
+          
+          # Output average time for sentences of different lengths, making it possible to see if analysis is performing in linear time
+          # respects the skip-label
+          # com.joliciel.talismane.parser.evaluate.ParseTimeByLengthObserver
+          
+          # Log of full transitions in the evaluation output - respects the error-labels
+          # com.joliciel.talismane.parser.TransitionLogWriter
+        ]
       }
     }
     
