Add token filters which run after tokenisation
These replace the TextReplaceFilter.
It makes more sense to run things like lowercasing of known words after
tokenisation, since we can then check if each identified token is known
or not. Running it before tokenisation forced us to test all sorts of
token possibilities.

--- a/talismane_core/languagePacks/french/config/spmrl-fr-train.conf
+++ b/talismane_core/languagePacks/french/config/spmrl-fr-train.conf
@@ -34,6 +34,12 @@ talismane {
     tokeniser {
       type = pattern
 
+      filters = [
+        com.joliciel.talismane.tokeniser.filters.QuoteNormaliser
+        com.joliciel.talismane.tokeniser.filters.LowercaseKnownFirstWordFilter
+        com.joliciel.talismane.tokeniser.filters.UppercaseSeriesFilter
+      ]
+      
       train {
         input-pattern = ${input-pattern}
 
