--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -231,6 +231,17 @@ talismane {
       #      a probabilistic tokeniser using supervised machine learning to take tokenisation decisions in areas where certain patterns are matched
       tokeniser = com.joliciel.talismane.tokeniser.SimpleTokeniser
       
+            
+      # Applied after tokenisation to normalise token text
+      filters = [
+      	#com.joliciel.talismane.tokeniser.filters.DiacriticRemover
+      	#com.joliciel.talismane.tokeniser.filters.LowercaseFilter
+      	#com.joliciel.talismane.tokeniser.filters.LowercaseKnownFirstWordFilter
+      	#com.joliciel.talismane.tokeniser.filters.LowercaseKnownWordFilter
+      	#com.joliciel.talismane.tokeniser.filters.QuoteNormaliser
+      	#com.joliciel.talismane.tokeniser.filters.UppercaseSeriesFilter
+      ]
+      
       # If using a pattern tokeniser, the path to the tokeniser model
       #model = null
             
