--- a/talismane_core/languagePacks/english/config/english-serialize-lexicon.conf
+++ b/talismane_core/languagePacks/english/config/english-serialize-lexicon.conf
@@ -2,10 +2,12 @@ languagePack="languagePacks/english/languagePack/"
 
 talismane {
   core {
-    locale = en
+    en = ${talismane.core.generic} {
+      locale = en
 
-    pos-tagger {
-      pos-tag-set = ${languagePack}"pennTagset.txt"
+      pos-tagger {
+        pos-tag-set = ${languagePack}"pennTagset.txt"
+      }
     }
   }
 }
