--- a/talismane_core/languagePacks/french/config/french-serialize-lexicon.conf
+++ b/talismane_core/languagePacks/french/config/french-serialize-lexicon.conf
@@ -2,10 +2,12 @@ languagePack="languagePacks/french/languagePack/"
 
 talismane {
   core {
-    locale = fr
+    fr = ${talismane.core.generic} {
+      locale = fr
 
-    pos-tagger {
-      pos-tag-set = ${languagePack}"talismaneTagset_fr.txt"
+      pos-tagger {
+        pos-tag-set = ${languagePack}"talismaneTagset_fr.txt"
+      }
     }
   }
 }
