--- a/examples/french/conf/fr-serialize-lexicon.conf
+++ b/examples/french/conf/fr-serialize-lexicon.conf
@@ -3,82 +3,16 @@ resource-dir="examples/french/"
 
 talismane {
   core {
-    locale = fr
-    
-    lexicons = [
-    ]
-    
-    annotators {  
-      text-annotators = [
-        ${resource-dir}"annotators/text_annotators.txt"
+    fr = ${talismane.core.generic} {
+      locale = fr
+      
+      lexicons = [
       ]
       
-      sentence-annotators = [
-        ${resource-dir}"annotators/sentence_annotators.txt"
-      ]
-    }
-    
-    sentence-detector {
-      train {
-        features = ${resource-dir}"features/sentenceDetector_fr_baseline.txt"
-      }
-    }
-    
-    tokeniser {
-      type = pattern
-
-      filters = [
-        com.joliciel.talismane.tokeniser.filters.QuoteNormaliser
-        com.joliciel.talismane.tokeniser.filters.LowercaseKnownFirstWordFilter
-        com.joliciel.talismane.tokeniser.filters.UppercaseSeriesFilter
-      ]
-
-      input {
-        input-pattern = ${input-pattern}
-      }
-
-      train {
-        input-pattern = ${input-pattern}
-
-        features=${resource-dir}"features/tokeniser_fr_baseline.txt"
-        patterns=${resource-dir}"features/tokeniserPatterns_fr.txt"
-      }
-    }
-    
-    pos-tagger {
-      pos-tag-set = ${resource-dir}"frTagset.txt"
-
-            
-      rules = [
-        ${resource-dir}"features/posTaggerConstraints_fr.txt"
-      ]
-      
-      input {
-        input-pattern = ${input-pattern}
+      pos-tagger {
+        pos-tag-set = ${resource-dir}"frTagset.txt"
       }
       
-      train {
-        input-pattern = ${input-pattern}
-
-        features=${resource-dir}"features/posTagger_fr_baseline.txt"
-      }
-
-    }
-    
-    parser {
-      dependency-labels = ${resource-dir}"frDependencyLabels.txt"
-
-      
-      input {
-        input-pattern = ${input-pattern}
-      }
-
-      train {
-        input-pattern = ${input-pattern}
-
-        features=${resource-dir}"features/parser_fr_baseline.txt" 
-      }
-
     }
   }
 }
