--- a/talismane_core/languagePacks/english/config/penn-dep-train.conf
+++ b/talismane_core/languagePacks/english/config/penn-dep-train.conf
@@ -47,79 +47,81 @@ corpus-rules = [
 
 talismane {
   core {
-    locale = en
+    en = ${talismane.core.generic} {
+      locale = en
     
-    lexicons = [
-      ${languagePack}"lexicons_en.zip"
-    ]
-    
-    annotators {
-      text-annotators = [
-        ${languagePack}"text_marker_filters.txt"
+      lexicons = [
+        ${languagePack}"lexicons_en.zip"
       ]
       
-      sentence-annotators = [
-        ${languagePack}"token_filters.txt"
-      ]
-    }
-    
-    sentence-detector {
-      train {
-        corpus-reader = com.joliciel.talismane.tokeniser.TokenRegexBasedCorpusReader
-        input-pattern = ${input-pattern}
-        corpus-rules = ${corpus-rules}
-
-        features = "languagePacks/english/features/sentenceDetector_en_baseline.txt"
-      }
-    }
-    
-    tokeniser {
-      type = pattern
-
-      filters = [
-        com.joliciel.talismane.tokeniser.filters.QuoteNormaliser
-        com.joliciel.talismane.tokeniser.filters.LowercaseKnownFirstWordFilter
-        com.joliciel.talismane.tokeniser.filters.UppercaseSeriesFilter
-      ]
-      
-      train {
-        input-pattern = ${input-pattern}
-        corpus-rules = ${corpus-rules}
-
-        features="languagePacks/english/features/tokeniser_en_baseline.txt"
-        patterns="languagePacks/english/features/tokeniserPatterns_en.txt"
-      }
-    }
-    
-    pos-tagger {
-      pos-tag-set = ${languagePack}"pennTagset.txt"
-      
-      pos-tag-map = {
-        Dela = ${languagePack}"dela-en_posTagMap.txt"
+      annotators {
+        text-annotators = [
+          ${languagePack}"text_marker_filters.txt"
+        ]
+        
+        sentence-annotators = [
+          ${languagePack}"token_filters.txt"
+        ]
       }
       
-      rules = [
-        ${languagePack}"posTaggerConstraints_en.txt"
-      ]
+      sentence-detector {
+        train {
+          corpus-reader = com.joliciel.talismane.tokeniser.TokenRegexBasedCorpusReader
+          input-pattern = ${input-pattern}
+          corpus-rules = ${corpus-rules}
 
-      train {
-        input-pattern = ${input-pattern}
-        corpus-rules = ${corpus-rules}
-
-        features="languagePacks/english/features/posTagger_en_baseline.txt"
-      }
-    }
-    
-    parser {      
-      dependency-labels = ${languagePack}"pennDependencyLabels.txt"
-      
-      train {
-        input-pattern = ${input-pattern}
-        corpus-rules = ${corpus-rules}
-
-        features="languagePacks/english/features/parser_en_baseline.txt" 
+          features = "languagePacks/english/features/sentenceDetector_en_baseline.txt"
+        }
       }
       
+      tokeniser {
+        type = pattern
+
+        filters = [
+          com.joliciel.talismane.tokeniser.filters.QuoteNormaliser
+          com.joliciel.talismane.tokeniser.filters.LowercaseKnownFirstWordFilter
+          com.joliciel.talismane.tokeniser.filters.UppercaseSeriesFilter
+        ]
+        
+        train {
+          input-pattern = ${input-pattern}
+          corpus-rules = ${corpus-rules}
+
+          features="languagePacks/english/features/tokeniser_en_baseline.txt"
+          patterns="languagePacks/english/features/tokeniserPatterns_en.txt"
+        }
+      }
+      
+      pos-tagger {
+        pos-tag-set = ${languagePack}"pennTagset.txt"
+        
+        pos-tag-map = {
+          Dela = ${languagePack}"dela-en_posTagMap.txt"
+        }
+        
+        rules = [
+          ${languagePack}"posTaggerConstraints_en.txt"
+        ]
+
+        train {
+          input-pattern = ${input-pattern}
+          corpus-rules = ${corpus-rules}
+
+          features="languagePacks/english/features/posTagger_en_baseline.txt"
+        }
+      }
+      
+      parser {      
+        dependency-labels = ${languagePack}"pennDependencyLabels.txt"
+        
+        train {
+          input-pattern = ${input-pattern}
+          corpus-rules = ${corpus-rules}
+
+          features="languagePacks/english/features/parser_en_baseline.txt" 
+        }
+        
+      }
     }
   }
 }
