--- a/talismane_examples/pom.xml
+++ b/talismane_examples/pom.xml
@@ -89,5 +89,9 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>net.sf.jopt-simple</groupId>
+      <artifactId>jopt-simple</artifactId>
+    </dependency>
   </dependencies>
 </project>
