--- a/talismane_extensions/src/main/resources/reference.conf
+++ b/talismane_extensions/src/main/resources/reference.conf
@@ -1,66 +1,73 @@
 talismane {
   extensions {
-    projectifier {
-      # A suffix to add to any projectivised arcs
-      non-projective-arc-suffix = ""
+    # This is a generic extensions configuration containing all the default values.
+    # When adding a new configuration, consider inheriting from this
+    generic {
+      projectifier {
+        # A suffix to add to any projectivised arcs
+        non-projective-arc-suffix = ""
+        
+        # Strategy for selecting among two potential projective heads: LeastLinearDistance|LeastDepthDifference|GreatestDepth
+        strategy = "GreatestDepth"
+      }
       
-      # Strategy for selecting among two potential projective heads: LeastLinearDistance|LeastDepthDifference|GreatestDepth
-      strategy = "GreatestDepth"
-    }
-    
-    corpus-statistics {
-      # Path to the serialized reference (training) corpus statistics file
-      # If provided, unknown words statistics will be included
-      # reference-stats = ""
-    }
-    
-    pos-tagger-statistics {
-      # Path to the serialized reference (training corpus) pos-tagger statistics file
-      # If provided, unknown words statistics will be included
-      # reference-stats = ""
-    }
-    
-    corpus-modifier {
-      # Each rule has the following tab-delimited format
-      # GOVPOS	GOV	DEPPOS	DEP	LABEL	ACTION	NEWLABEL
-      # Where GOVPOS is the governor's pos-tag, or * for any.
-      # GOV is the governor's word form, or * for any.
-      # DEPPOS is the dependent's pos-tag, or * for any
-      # DEP is the dependent's word form, or * for any
-      # LABEL is the current label, or * for any
-      # ACTION is either Replace or Remove
-      # NEWLABEL is a new label, only required if action is Replace.
-      rules = [
-      ]
+      corpus-statistics {
+        # Path to the serialized reference (training) corpus statistics file
+        # If provided, unknown words statistics will be included
+        # reference-stats = ""
+      }
+      
+      pos-tagger-statistics {
+        # Path to the serialized reference (training corpus) pos-tagger statistics file
+        # If provided, unknown words statistics will be included
+        # reference-stats = ""
+      }
+      
+      corpus-modifier {
+        # Each rule has the following tab-delimited format
+        # GOVPOS	GOV	DEPPOS	DEP	LABEL	ACTION	NEWLABEL
+        # Where GOVPOS is the governor's pos-tag, or * for any.
+        # GOV is the governor's word form, or * for any.
+        # DEPPOS is the dependent's pos-tag, or * for any
+        # DEP is the dependent's word form, or * for any
+        # LABEL is the current label, or * for any
+        # ACTION is either Replace or Remove
+        # NEWLABEL is a new label, only required if action is Replace.
+        rules = [
+        ]
+      }
     }
   }
-  
-  core {
-    pos-tagger {
-      output {
-        # processors = [
-          #com.joliciel.talismane.extensions.corpus.PosTaggerStatisticsWriter
-        # ]
-      }
-    }
 
-    parser {
-      input = {
-        # corpus-reader = com.joliciel.talismane.extensions.standoff.StandoffReader
+  # Additional core input and output processors available with extensions
+  core {
+    generic {
+      pos-tagger {
+        output {
+          # processors = [
+            #com.joliciel.talismane.extensions.corpus.PosTaggerStatisticsWriter
+          # ]
+        }
       }
-      
-      output {
-        # processors = [
-          # com.joliciel.talismane.extensions.corpus.CorpusStatisticsWriter
-          # com.joliciel.talismane.extensions.corpus.NonProjectiveStatisticsWriter
-          # com.joliciel.talismane.extensions.standoff.StandoffWriter
-          # com.joliciel.talismane.extensions.standoff.StandoffSentenceWriter
-          
-          # The following processors will not output anything,
-          # they need to be followed by a com.joliciel.talismane.parser.FreemarkerParseWriter or equivalent
-          # com.joliciel.talismane.extensions.corpus.CorpusProjectifier
-          # com.joliciel.talismane.extensions.corpus.CorpusModifier
-        # ]
+
+      parser {
+        input = {
+          # corpus-reader = com.joliciel.talismane.extensions.standoff.StandoffReader
+        }
+        
+        output {
+          # processors = [
+            # com.joliciel.talismane.extensions.corpus.CorpusStatisticsWriter
+            # com.joliciel.talismane.extensions.corpus.NonProjectiveStatisticsWriter
+            # com.joliciel.talismane.extensions.standoff.StandoffWriter
+            # com.joliciel.talismane.extensions.standoff.StandoffSentenceWriter
+            
+            # The following processors will not output anything,
+            # they need to be followed by a com.joliciel.talismane.parser.FreemarkerParseWriter or equivalent
+            # com.joliciel.talismane.extensions.corpus.CorpusProjectifier
+            # com.joliciel.talismane.extensions.corpus.CorpusModifier
+          # ]
+        }
       }
     }
   }
