Move test configuration to new config schema

--- a/talismane_core/src/test/resources/test.conf
+++ b/talismane_core/src/test/resources/test.conf
@@ -1,10 +1,12 @@
 talismane {
   core {
-    locale = fr
-		
-    pos-tagger {
-      # The pos-tag set used when no model has been provided
-      pos-tag-set = "src/test/resources/talismaneTagset_fr.txt"
+    test = ${talismane.core.generic} {
+      locale = fr
+    
+      pos-tagger {
+        # The pos-tag set used when no model has been provided
+        pos-tag-set = "src/test/resources/talismaneTagset_fr.txt"
+      }
     }
   }
 }
