--- a/talismane_core/src/test/resources/testWithLex.conf
+++ b/talismane_core/src/test/resources/testWithLex.conf
@@ -1,17 +1,19 @@
 talismane {
   core {
-    locale = fr
-	
-	lexicons = [
-		"src/test/resources/lexicons/lexicons_fr.txt"
-	]
-	
-    pos-tagger {
-      pos-tag-set = "src/test/resources/talismaneTagset_fr.txt"
-      
-      pos-tag-map {
-      	GlaffD = "src/test/resources/lexicons/glaff-1.2.1_posTagMap.txt"
-      	LefffD = "src/test/resources/lexicons/lefff-ext-3.2_posTagMap.txt"
+    test = ${talismane.core.generic} {
+      locale = fr
+    
+      lexicons = [
+        "src/test/resources/lexicons/lexicons_fr.txt"
+      ]
+    
+      pos-tagger {
+        pos-tag-set = "src/test/resources/talismaneTagset_fr.txt"
+        
+        pos-tag-map {
+          GlaffD = "src/test/resources/lexicons/glaff-1.2.1_posTagMap.txt"
+          LefffD = "src/test/resources/lexicons/lefff-ext-3.2_posTagMap.txt"
+        }
       }
     }
   }
